# volume_momentum_notify

./: .gitignore  AGENTS.md  README.md  config.example.json  config.test-1y.json  daily_email_notification_implementation_plan.md  daily_email_notification_requirements.md  implementation_plan.md  pyproject.toml  spec.md  trade_backtest_spec.md
.github/workflows/: daily-notify.yml
src/volume_momentum/: __init__.py  cli.py  config.py  daily.py  data.py  evaluation.py  reporting.py  signals.py  trade_backtest.py
tests/: test_cli.py  test_config.py  test_daily.py  test_data.py  test_evaluation.py  test_reporting.py  test_signals.py  test_trade_backtest.py
